--- a/games.html
+++ b/games.html
@@ -49,6 +49,10 @@
             <div class="game-title">Tic Tac Toe</div>
             <img src="medias/tic_tac_toe.png" alt="Tic Tac Toe">
         </div>
+        <div class="game-item" onclick="location.href='/BattleCubes/index.html'">
+            <div class="game-title">BattleCubes</div>
+            <img src="medias/bluecube.jpg" alt="Those cubes that like to battle">
+        </div>
         <!-- Add more game items here if needed -->
     </main>
 </body>
